--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -62,6 +62,9 @@ ul {
 li {
   margin-top: 1rem;
 }
+input,
+select,
+textarea,
 button {
   padding: 1rem;
   border-radius: 0.5rem;
@@ -70,7 +73,10 @@ button {
   font-family: Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #f8f8f8;
+
+}
+button{
+    background-color: #f8f8f8;
   cursor: pointer;
 }
 button.primary{
@@ -79,6 +85,9 @@ button.primary{
 button.block{
   width: 100%;
 }
+input:hover,
+select:hover,
+textarea:hover,
 button:hover{
   border: 0.1rem #404040 solid;
 }
@@ -91,6 +100,14 @@ a.brand {
   color: #ffffff;
   font-size: 3rem;
   font-weight: bold;
+}
+.badge{
+  background-color: #f02020;
+  color: #ffffff;
+  border-radius: 50%;
+  padding: 0.2rem 0.7rem;
+  font-size: 1.4rem;
+  margin-left: 0.2rem;
 }
 .row {
   display: flex;
@@ -110,10 +127,14 @@ a.brand {
 .col-2 {
   flex: 2 1 50rem;
 }
+.min-30{
+  min-width: 30rem;
+}
 /* Image */
 img {
   border-radius: 0.5rem;
 }
+
 img.medium {
   max-width: 29rem;
   width: 100%;
@@ -121,7 +142,10 @@ img.medium {
 img.large{
   width: 100%;
 }
-
+img.small{
+  max-width: 5rem;
+  width: 100%;
+}
 
 /* Card */
 .card {
