--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -172,7 +172,11 @@ img.small{
 .rating span:last-child {
   color: #404040;
 }
+
 /* alert */
+.loading{
+  display: block !important;
+}
 .success {
   color: #20a020;
 }
@@ -204,7 +208,7 @@ img.small{
 }
 .form label{
   margin: 1rem 0;
-  display: block;
+  /* display: block; */
 }
 /* dropdown */
 .dropdown{
@@ -225,4 +229,16 @@ img.small{
 }
 .dropdown:hover .dropdown-content{
   display: block;
+}
+/* checkout steps */
+.checkout-steps > div {
+  border-top: 0.3rem #c0c0c0 solid;
+  color: #c0c0c0;
+  flex: 1;
+  padding: 1rem;
+  font-weight: bold;
+}
+.checkout-steps >div.active{
+  border-top-color: #f08000;
+  color: #f08000;
 }
